<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.russianpost.dc</groupId>
    <artifactId>das-avtotests</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>
<!--    <modules>
        <module>assembly</module>

    </modules>-->


    <repositories>
        <repository>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
            <id>HDPReleases</id>
            <name>HDP Releases</name>
            <url>http://repo.hortonworks.com/content/repositories/releases/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>repo</name>
            <url>http://artifactory.russianpost.ru/artifactory/repo</url>
        </repository>
        <repository>
            <snapshots/>
            <id>snapshots</id>
            <name>libs-snapshot</name>
            <url>http://artifactory.russianpost.ru/artifactory/libs-snapshot</url>
        </repository>
    </repositories>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <hadoop.version>2.6.0</hadoop.version>
        <avro.version>1.7.7</avro.version>

        <das-etl.version>1.0.17-SNAPSHOT</das-etl.version>
        <datacloud-commons.version>1.0.35</datacloud-commons.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <allure.version>1.4.23</allure.version>
        <compiler.version>1.8</compiler.version>
        <aspectj.version>1.8.9</aspectj.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                        <groupId>org.apache.avro</groupId>
                        <artifactId>avro-maven-plugin</artifactId>
                        <version>1.7.7</version>
                        <executions>
                        <execution>
                            <phase>generate-sources</phase>
                        <goals>
                            <goal>schema</goal>
                        </goals>
                        <configuration>
                            <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
                            <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
                        </configuration>
                        </execution>
                        </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                    <version>3.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.4</version>
                    <configuration>
                        <!--<configuration>
                            <descriptor>src/assembly/bin.xml</descriptor>
                            <finalName>apache-maven-${pom.version}</finalName>
                        </configuration>-->
                        <!--<descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>-->
                    </configuration>
                    <executions>
                        <execution>
                            <id>make-assembly</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.7</version>
                    <executions>
                        <execution>
                            <id>copy-resources</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>copy-resources</goal>
                            </goals>
                            <configuration>
                                <!--<outputDirectory>${basedir}/target/allure-results</outputDirectory>-->
                                <outputDirectory>${basedir}/target/sql</outputDirectory>
                                <resources>
                                    <resource>
                                        <directory>src/sql/balances</directory>
                                        <filtering>true</filtering>
                                    </resource>
                                </resources>
                                <encoding>${project.build.sourceEncoding}</encoding>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.7</version>
                    <configuration>

                        <!--<testFailureIgnore>false</testFailureIgnore>
                        <argLine>
                            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                            &lt;!&ndash;  -Xmx128m -Xms128m -XX:MaxPermSize=196m ${selenium.test.jvmargs}  &ndash;&gt;
                        </argLine>-->

                    <suiteXmlFiles>
                        <!-- Run Test Suites-->
                        <!--<suiteXmlFile>src\test\BalanceTest.xml</suiteXmlFile>-->
                         <!--<suiteXmlFile>src\test\OozieDemo.xml</suiteXmlFile>-->
                        <suiteXmlFile>src\test\TestRun658T.xml</suiteXmlFile>
                        <!--<suiteXmlFile>src\test\TestRun658.xml</suiteXmlFile>-->
                        <!--<suiteXmlFile>src\test\SummaryRest.xml</suiteXmlFile> -->
                        <!-- <suiteXmlFile>src\test\DataGeneration.xml</suiteXmlFile>-->
                        <!-- <suiteXmlFile>src\test\DataGeneration.xml</suiteXmlFile> -->
                        <!-- <suiteXmlFile>src\test\RegressionDC437.xml</suiteXmlFile> -->
                       <!-- <suiteXmlFile>src\test\DemoTestCasandra.xml</suiteXmlFile> --> 
                    </suiteXmlFiles>
                    </configuration>
                    <!--<dependencies>
                        &lt;!&ndash; https://mvnrepository.com/artifact/org.aspectj/aspectjweaver &ndash;&gt;
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjweaver</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>-->
                </plugin>
               <!-- <plugin>
                    <groupId>org.mortbay.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <configuration>
                        <webAppSourceDirectory>${project.build.directory}/target/site/allure-maven-plugin</webAppSourceDirectory>
                    </configuration>
                </plugin>-->
                <!--Needed only to show reports locally. Run jetty:run and
            open localhost:8080 to show the report-->
               <!-- <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>9.2.10.v20150310</version>
                    <configuration>
                        <webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
                        <stopKey>stop</stopKey>
                        <stopPort>8080</stopPort>
                    </configuration>
                </plugin>-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>2.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.4</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                               <goal>install-file</goal> 
                            </goals>
                            <configuration>
                                <!--
                                <groupId>com.vertica.jdbc</groupId>
                                <artifactId>vertica-jdbc</artifactId>
                                <version>7.1.2-0</version>
                                <packaging>jar</packaging>
                                <file>${basedir}/lib/vertica-jdbc-7.1.2-0.jar</file>
                                 -->
                                <groupId>com.datastax.cassandra</groupId>
                                <artifactId>cassandra-driver-core</artifactId>
                                <version>2.1.9</version>
                                <packaging>jar</packaging>
                                <file>${basedir}/lib/cassandra-driver-core-2.1.9.jar</file>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>    
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <dependency>
	<groupId>org.apache.oozie</groupId>
	<artifactId>oozie-core</artifactId>
	<version>4.2.0</version>
        </dependency>
        <dependency>
                <groupId>org.apache.hive</groupId>
                <artifactId>hive-jdbc</artifactId>
                <version>1.2.1</version>
         </dependency>
        
        <!--
         <dependency>
            <groupId>com.vertica.jdbc</groupId>
            <artifactId>vertica-jdbc</artifactId>
            <version>7.1.2-0</version>
            
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/vertica-jdbc-7.1.2-0.jar</systemPath>
             
        </dependency> 
        -->
        <dependency>
            <groupId>com.datastax.cassandra</groupId>
            <artifactId>cassandra-driver-core</artifactId>
            <version>3.0.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/ru.yandex.qatools.allure/allure-java-annotations -->
        <dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-java-annotations</artifactId>
            <version>1.4.4</version>
        </dependency>
        <dependency>
	<groupId>com.codepine.api</groupId>
	<artifactId>testrail-api-java-client</artifactId>
	<version>1.0.0</version>
        </dependency>
        <dependency>
	<groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.retailmenot</groupId>
            <artifactId>testrailsdk</artifactId>
            <version>0.9</version>
        </dependency>
        <!--<dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-testng-adaptor</artifactId>
            <version>${allure.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>-->

         <dependency>
                <groupId>org.apache.hadoop</groupId>
                <artifactId>hadoop-client</artifactId>
                <version>${hadoop.version}</version>
         </dependency>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-exec</artifactId>
        </dependency>

        <dependency>
            <groupId>ru.russianpost.dc.commons</groupId>
            <artifactId>model-commons</artifactId>
            <version>${datacloud-commons.version}</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro-tools</artifactId>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.1</version>
            <scope>test</scope>
        </dependency>
        <!--<dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>-->
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.hadoop</groupId>
                <artifactId>hadoop-core</artifactId>
                <version>1.2.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>9.4-1201-jdbc41</version>
            </dependency>

            <!--
            <dependency>
                <groupId>ru.russianpost.tracking</groupId>
                <artifactId>tracking-api</artifactId>
                <version>1.16</version>
            </dependency>
            -->
            
            <dependency>
                <groupId>org.apache.hadoop</groupId>
                <artifactId>hadoop-client</artifactId>
                <version>${hadoop.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.sun.jmx</groupId>
                        <artifactId>jmxri</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.sun.jdmk</groupId>
                        <artifactId>jmxtools</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>javax.jms</groupId>
                        <artifactId>jms</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro</artifactId>
                <version>${avro.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro-mapred</artifactId>
                <version>${avro.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.hive</groupId>
                <artifactId>hive-exec</artifactId>
                <version>0.14.0.2.2.4.8-2</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.calcite</groupId>
                        <artifactId>calcite-avatica</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.calcite</groupId>
                        <artifactId>calcite-core</artifactId>
                    </exclusion>
                </exclusions>
                <scope>test</scope>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>org.apache.hive</groupId>
                <artifactId>hive-jdbc</artifactId>
                <version>1.1.0</version>
            </dependency>

            <dependency>
                <groupId>ru.russianpost.dc</groupId>
                <artifactId>logs-converter</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro-tools</artifactId>
                <version>1.7.7</version>
                <scope>test</scope>
                <type>jar</type>
            </dependency>
            <!-- https://mvnrepository.com/artifact/net.sourceforge.javacsv/javacsv -->
            <dependency>
                <groupId>net.sourceforge.javacsv</groupId>
                <artifactId>javacsv</artifactId>
                <version>2.0</version>
            </dependency>

<!--            <dependency>
                <groupId>ru.yandex.qatools.properties</groupId>
                <artifactId>properties-loader</artifactId>
                <version>1.5</version>
            </dependency>-->

        </dependencies>
    </dependencyManagement>
    <!--<reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>ru.yandex.qatools.allure</groupId>
                <artifactId>allure-maven-plugin</artifactId>
                <version>2.5</version>
            </plugin>
        </plugins>
    </reporting>-->
</project>